# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "hash_combine"
version                 = "0.3.10-alpha.4"
publish                 = false

description             = "Hash library with simple combine method."
keywords                = ["hash"]
categories              = ["algorithms"]
readme                  = "README.md"

include                 = [ "Cargo.toml",
                            "build.rs",
                            "src/**/*.rs",
                            "crates-io.md",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

rust-version            = "1.85.0"
edition                 = "2024"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/hash_combine/"
homepage                = "https://github.com/hanepjiv/hash_combine-rs.git"
repository              = "https://github.com/hanepjiv/hash_combine-rs.git"
# =============================================================================
[dependencies]

# =============================================================================
[lints]
workspace               = true
# -----------------------------------------------------------------------------
[workspace.lints.rust]
# rustc 1.84.0 (9fc6b4312 2025-01-07)
absolute_paths_not_starting_with_crate = "forbid"
ambiguous_negative_literals = "forbid"
deprecated_in_future = "forbid"
deprecated_safe_2024 = "forbid"
elided_lifetimes_in_paths = "forbid"
explicit_outlives_requirements = "forbid"
ffi_unwind_calls = "forbid"
if_let_rescope = "warn"
impl_trait_overcaptures = "forbid"
keyword_idents_2018 = "forbid"
keyword_idents_2024 = "forbid"
let_underscore_drop = "forbid"
macro_use_extern_crate = "forbid"
meta_variable_misuse = "forbid"
missing_abi = "forbid"
missing_copy_implementations = "forbid"
missing_debug_implementations = "deny"
missing_docs = "forbid"
missing_unsafe_on_extern = "forbid"
non_ascii_idents = "forbid"
redundant_imports = "forbid"
redundant_lifetimes = "forbid"
rust_2021_incompatible_closure_captures = "forbid"
rust_2021_incompatible_or_patterns = "forbid"
rust_2021_prefixes_incompatible_syntax = "forbid"
rust_2021_prelude_collisions = "forbid"
rust_2024_guarded_string_incompatible_syntax = "forbid"
rust_2024_incompatible_pat = "forbid"
rust_2024_prelude_collisions = "forbid"
single_use_lifetimes = "forbid"
tail_expr_drop_order = "forbid"
trivial_casts = "deny"
trivial_numeric_casts = "forbid"
unit_bindings = "forbid"
unnameable_types = "forbid"
unreachable_pub = "forbid"
unsafe_attr_outside_unsafe = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "forbid"
unused_extern_crates = "forbid"
unused_import_braces = "forbid"
unused_lifetimes = "forbid"
unused_macro_rules = "forbid"
unused_qualifications = "forbid"
unused_results = "forbid"
variant_size_differences = "forbid"
abi_unsupported_vector_types = "forbid"
ambiguous_glob_imports = "forbid"
ambiguous_glob_reexports = "forbid"
ambiguous_wide_pointer_comparisons = "forbid"
anonymous_parameters = "forbid"
array_into_iter = "forbid"
asm_sub_register = "forbid"
async_fn_in_trait = "forbid"
bad_asm_style = "forbid"
bare_trait_objects = "forbid"
boxed_slice_into_iter = "forbid"
break_with_label_and_loop = "forbid"
clashing_extern_declarations = "forbid"
coherence_leak_check = "forbid"
confusable_idents = "forbid"
const_evaluatable_unchecked = "forbid"
const_item_mutation = "forbid"
dangling_pointers_from_temporaries = "forbid"
dead_code = "deny"
dependency_on_unit_never_type_fallback = "forbid"
deprecated = "deny"
deprecated_where_clause_location = "forbid"
deref_into_dyn_supertrait = "forbid"
deref_nullptr = "forbid"
dropping_copy_types = "forbid"
dropping_references = "forbid"
drop_bounds = "forbid"
duplicate_macro_attributes = "forbid"
dyn_drop = "forbid"
elided_named_lifetimes = "forbid"
ellipsis_inclusive_range_patterns = "forbid"
exported_private_dependencies = "forbid"
forbidden_lint_groups = "forbid"
forgetting_copy_types = "forbid"
forgetting_references = "forbid"
for_loops_over_fallibles = "forbid"
function_item_references = "forbid"
hidden_glob_reexports = "forbid"
impl_trait_redundant_captures = "forbid"
improper_ctypes = "forbid"
improper_ctypes_definitions = "forbid"
incomplete_features = "forbid"
inline_no_sanitize = "forbid"
internal_features = "forbid"
invalid_from_utf8 = "forbid"
invalid_macro_export_arguments = "forbid"
invalid_nan_comparisons = "forbid"
invalid_value = "forbid"
irrefutable_let_patterns = "forbid"
large_assignments = "forbid"
late_bound_lifetime_arguments = "forbid"
legacy_derive_helpers = "forbid"
map_unit_fn = "forbid"
mixed_script_confusables = "forbid"
named_arguments_used_positionally = "forbid"
never_type_fallback_flowing_into_unsafe = "forbid"
non_camel_case_types = "forbid"
non_contiguous_range_endpoints = "forbid"
non_fmt_panics = "forbid"
non_local_definitions = "forbid"
non_shorthand_field_patterns = "forbid"
non_snake_case = "forbid"
non_upper_case_globals = "forbid"
noop_method_call = "forbid"
no_mangle_generic_items = "forbid"
opaque_hidden_inferred_bound = "forbid"
out_of_scope_macro_calls = "forbid"
overlapping_range_endpoints = "forbid"
path_statements = "forbid"
private_bounds = "forbid"
private_interfaces = "forbid"
ptr_cast_add_auto_to_object = "forbid"
ptr_to_integer_transmute_in_consts = "forbid"
redundant_semicolons = "forbid"
refining_impl_trait_internal = "forbid"
refining_impl_trait_reachable = "forbid"
renamed_and_removed_lints = "warn"
repr_transparent_external_private_fields = "forbid"
self_constructor_from_outer_item = "forbid"
semicolon_in_expressions_from_macros = "forbid"
special_module_name = "forbid"
stable_features = "forbid"
static_mut_refs = "forbid"
suspicious_double_ref_op = "forbid"
trivial_bounds = "forbid"
type_alias_bounds = "forbid"
tyvar_behind_raw_pointer = "forbid"
uncommon_codepoints = "forbid"
unconditional_recursion = "forbid"
uncovered_param_in_projection = "forbid"
undefined_naked_function_abi = "forbid"
unexpected_cfgs = "forbid"
unfulfilled_lint_expectations = "forbid"
ungated_async_fn_track_caller = "forbid"
uninhabited_static = "forbid"
unknown_lints = "warn"
unknown_or_malformed_diagnostic_attributes = "forbid"
unnameable_test_items = "forbid"
unreachable_code = "forbid"
unreachable_patterns = "forbid"
unstable_name_collisions = "forbid"
unstable_syntax_pre_expansion = "forbid"
unsupported_fn_ptr_calling_conventions = "forbid"
unused_allocation = "forbid"
unused_assignments = "forbid"
unused_associated_type_bounds = "forbid"
unused_attributes = "forbid"
unused_braces = "forbid"
unused_comparisons = "forbid"
unused_doc_comments = "forbid"
unused_features = "forbid"
unused_imports = "forbid"
unused_labels = "forbid"
unused_macros = "forbid"
unused_must_use = "forbid"
unused_mut = "forbid"
unused_parens = "forbid"
unused_unsafe = "forbid"
unused_variables = "forbid"
useless_ptr_null_checks = "forbid"
while_true = "forbid"
ambiguous_associated_items = "forbid"
arithmetic_overflow = "forbid"
binary_asm_labels = "forbid"
bindings_with_variant_name = "forbid"
cenum_impl_drop_cast = "forbid"
conflicting_repr_hints = "forbid"
elided_lifetimes_in_associated_constant = "forbid"
enum_intrinsics_non_enums = "forbid"
explicit_builtin_cfgs_in_flags = "forbid"
ill_formed_attribute_input = "forbid"
incomplete_include = "forbid"
ineffective_unstable_trait_impl = "forbid"
invalid_atomic_ordering = "forbid"
invalid_doc_attributes = "forbid"
invalid_from_utf8_unchecked = "forbid"
invalid_reference_casting = "forbid"
invalid_type_param_default = "forbid"
let_underscore_lock = "forbid"
long_running_const_eval = "forbid"
macro_expanded_macro_exports_accessed_by_absolute_paths = "forbid"
missing_fragment_specifier = "forbid"
mutable_transmutes = "forbid"
named_asm_labels = "forbid"
no_mangle_const_items = "forbid"
order_dependent_trait_objects = "forbid"
overflowing_literals = "forbid"
patterns_in_fns_without_body = "forbid"
proc_macro_derive_resolution_fallback = "forbid"
pub_use_of_private_extern_crate = "forbid"
soft_unstable = "forbid"
text_direction_codepoint_in_comment = "forbid"
text_direction_codepoint_in_literal = "forbid"
unconditional_panic = "forbid"
undropped_manually_drops = "forbid"
unknown_crate_types = "forbid"
useless_deprecated = "forbid"
wasm_c_abi = "forbid"
