# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "hash_combine"
version                 = "0.3.10-alpha.15"
publish                 = true

description             = "Hash library with simple combine method."
keywords                = ["hash"]
categories              = ["algorithms"]
readme                  = "README.md"

include                 = [ "Cargo.toml",
                            "build.rs",
                            "src/**/*.rs",
                            "crates-io.md",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

edition                 = "2024"
rust-version            = "1.85.1"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/hash_combine/"
homepage                = "https://github.com/hanepjiv/hash_combine-rs.git"
repository              = "https://github.com/hanepjiv/hash_combine-rs.git"
# =============================================================================
[dependencies]

# =============================================================================
[lints]
workspace               = true
# -----------------------------------------------------------------------------
[workspace.lints.rust]
